--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 <body>
     <div class="card">
         <img src="https://via.placeholder.com/120" alt="Profile Picture">
-        <h2>Swetha</h2>
+        <h2>Ganesh</h2>
         <p>CSE Student | Interested in Web Development and AI</p>
     </div>
 </body>
 </html>
+
