--- a/index.html
+++ b/index.html
@@ -1,47 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Card</title>
 
     <style>
         body {
-            font-family: Arial;
-            background-color: lightgray;
-            text-align: center;
-            padding: 40px;
+            font-family: Arial, sans-serif;
+            background: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
 
         .card {
-            background-color: white;
-            width: 300px;
-            margin: auto;
+            background: #ffffff;
+            width: 320px;
             padding: 20px;
-            border: 1px solid black;
-            border-radius: 8px;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+            text-align: center;
         }
 
-        img {
-            width: 120px;
-            height: 120px;
+        .card img {
+            width: 130px;
+            height: 130px;
             border-radius: 50%;
+            object-fit: cover;
         }
 
-        h2 {
-            margin: 10px 0;
+        .card h2 {
+            margin: 15px 0 5px;
+            font-size: 24px;
         }
 
-        p {
-            color: #444;
+        .card p {
+            color: #555;
+            font-size: 15px;
         }
     </style>
 </head>
 
 <body>
+
     <div class="card">
-        <img src="https://via.placeholder.com/120" alt="Profile Picture">
-        <h2>Ganesh</h2>
-        <p>CSE Student | Interested in Web Development and AI</p>
+        <img src="https://via.placeholder.com/150" alt="Profile Photo">
+        <h2>Your Name</h2>
+        <p>Short description about you. Example: Web Developer | CSE Student | Tech Enthusiast</p>
     </div>
+
 </body>
 </html>
-
