--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
 <body>
 
     <div class="card">
-        <img src="https://via.placeholder.com/150" alt="Profile Photo">
+        <img src="C:\Users\GANESH\CrossDevice\vivo Y300 5G\storage\Pictures\Remini\1757865312654.jpg" alt="Profile Photo">
         <h2>Your Name</h2>
         <p>Short description about you. Example: Web Developer | CSE Student | Tech Enthusiast</p>
     </div>
 
 </body>
 </html>
+
